changes -- phd, pc chair

--- a/index.html
+++ b/index.html
@@ -1009,9 +1009,6 @@ Today,</i> etc.
             <!-- <li>Runchao Han (Feb.2019-), Monash University. </li> -->
             <li>Xiangwen Yang (July 2024-), The University of Sydney.</li>
             <li>Zhichun Lu (July 2024-), The University of Sydney.</li>
-            <li>Hans Schmiedel (Nov. 2021-), The University of Sydney.</li>
-            <li>Yuanzhe Zhang (June 2021-), The University of Sydney.</li>
-            <li>Liangrong Zhao (March 2021-), Monash University.</li>
           </ol>
           <font size="4"><b>Co-supervision</b><br>
             <ol type="circle">
@@ -1031,6 +1028,9 @@ Today,</i> etc.
           </ol>
           <b>PhD</b><br>
           <ol type="circle">
+            <li>Hans Schmiedel (2021-2025), The University of Sydney. <br> (First job: Postdoc at USyd.)</li>
+            <li>Yuanzhe Zhang (2021-2025), The University of Sydney. <br> (First job: Postdoc at NTU.)</li>
+            <li>Liangrong Zhao (2021-2025), Monash University.</li>
             <li>Peter Ince (2021-2025), Monash University. <br> (First job: Founder, Sigil Labs.)</li>
             <li>Zoey Ziyi Li (2021-2024), Monash University. <br> (First job: Lecturer, University of Melbourne.)</li>
             <li>Sina Aeeneh (2020-2024), Monash University. <br> (First job: Engineer, V/Line.)</li>
@@ -1147,13 +1147,14 @@ Today,</i> etc.
                   (DECRA)</b>, Australian Research Council (ARC),
                   2021.</li>
                   <li>
-                    <b>Best Paper Award</b> at Blockchain 2021 and
-                    Blockchain 2022.
+                    <b>Best Paper Award</b> at Blockchain 2022.
+                  </li>
+                  <li>
+                    <b>Best Paper Award</b> at Blockchain 2021.
                   </li>
                   <li> <b>IBM Academic Award</b>, 2020. (Covered by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash News</a> and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.)</li> 
                   <li> <b>Dean's Award for
-                      Excellence in Research Impact
-                    </b>, Monash university, 2019. </li>
+                      Excellence in Research Impact</b>, Monash university, 2019. </li>
 
                   <li> <b>Finalist (Technology
                       Application) for Endeavour
@@ -1166,7 +1167,7 @@ Today,</i> etc.
                     2016. (3% in UK, 1% worldwide.)</li>
                   <li>
                     <b>Finalist for RAEng Enterprise
-                      Fellowship </b>, Royal Academy of
+                      Fellowship</b>, Royal Academy of
                     Engineering (RAEng), UK. 2015.
                   </li>
 
@@ -1519,8 +1520,7 @@ Today,</i> etc.
                                 Potential: Advancements and
                                 Innovations in Blockchain Technology”.
                               </li>
-                             
-                             
+
                               <li>
                                 [2024] Guest Editor, <b> IEEE Internet
                                   of Things Magazine
@@ -1538,6 +1538,7 @@ Today,</i> etc.
 
                             <li><b>Conference (Co-)Chair (Selected recent activities)</b></li>
                             <ul type="circle">
+                              <li>PC Co-Chai, Nanyang Blockchain Conference, 2026.</li>
                               <li> Demo Chair. The 8th IEEE International Conference on Blockchain and Cryptocurrency (ICBC), 2026.</li>
                               <li> Track Chair. The 1st IEEE International Conference on Distributed Ledger Technologies (ICDLT), 2025.</li>
                               <li> Publicity Co-Chair. The 54th
