--- a/index.html
+++ b/index.html
@@ -253,6 +253,24 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b> [2025-12]</b> Our paper, "Athena and
+                            Aegis", is accepted by <b>NDSS'26</b>,
+                            providing a complete solution in
+                            addressing the rollback issues in
+                            TEE-empowered hybrid BFT protocols, with
+                            the first efficient view synchronizer
+                            (named Aegis) for TEE-BFTs.
+
+                            <!-- In particular, we present Aegis, the first -->
+                            <!-- efficient view synchronizer for BFT -->
+                            <!-- protocols with trusted components. On top -->
+                            <!-- of Aegis, we introduce Athena, the first -->
+                            <!-- BFT consensus protocol resilient to a -->
+                            <!-- strong adversary model with a bounded -->
+                            <!-- number of Byzantine faults and potentially -->
+                            <!-- unbounded mobile crash-recoveries. -->
+                          </li>
+
                           <li> <b> [2025-10]</b> I'm delighted to
                             receive the <b>Top Reviewers Award</b>
                             from <b>ACM CCS'25</b>.
@@ -884,6 +902,7 @@ Today,</i> etc.
                             <!-- identified severe attacks capable of -->
                             <!-- disrupting or taking down major -->
                             <!-- blockchains' p2p network. -->
+                            <br> <b>[NDSS'26]</b> "Athena and Aegis: Rollback Resilience in TEE-Aided Blockchain Consensus"
                             <br> <b>[ACM CCS'25]</b> "Posterior Security: Anonymity and Message Hiding of Standard  Signatures"
                             <br> <b>[IEEE ICDCS'25]</b> "Mosaic: Client-driven Account Allocation Framework in Sharded Blockchains"
                             <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
