--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@ http://www.templatemo.com/tm-395-urbanic
                         <div style="height:9cm; overflow:auto">
                           <li><b> [2025-12]</b> Our paper, "Athena and
                             Aegis", is accepted by <b>NDSS'26</b>,
-                            providing a complete solution in
-                            addressing the rollback issues in
+                            providing the first complete solution in
+                            addressing rollback issues in
                             TEE-empowered hybrid BFT protocols, with
                             the first efficient view synchronizer
                             (named Aegis) for TEE-BFTs.
