--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ http://www.templatemo.com/tm-395-urbanic
         <title>Jiangshan Yu</title> <meta name="keywords" content="Jiangshan Yu,
         security, blockchain, privacy, 于江山, 信息安全">
         <meta property="og:description" content="Homed page of Dr. Jiangshan Yu, University of Sydney, Australia.">
-        <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -131,8 +130,10 @@ http://www.templatemo.com/tm-395-urbanic
                       <p> <font size="5"> <b>Dr. Jiangshan Yu (于江山)</b></font></p>
 
                       <p><font size="4"><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
-                            Associate Professor</a>
-                          <br> Director, <a href=https://usyd-desci.github.io/>Sydney Blockchain Centre</a>
+                              Associate Professor</a>
+                          <br> ACS (Australian Computer Society) Fellow
+                          <p style="margin:0.5em;"></p>
+                          Director, <a href=https://usyd-desci.github.io/>Sydney Blockchain Centre</a>
                           <br> Director, University Collaboration
                           <br> Elected Member, IFIP Working Group 10.4
                           <br> Australian Representative, IFIP TC 10
@@ -153,12 +154,11 @@ http://www.templatemo.com/tm-395-urbanic
                            Processing
                            (<a href="https://en.wikipedia.org/wiki/International_Federation_for_Information_Processing">IFIP</a>)
                            Technical Committee 10 on Computer Systems
-                           Technology, elected by the Australian
-                           Computer Society (ACS). I'm an elected
-                           member of
+                           Technology, an elected member of
                            the <a href="https://www.dependability.org/?page_id=265">IFIP
                            Working Group 10.4 on Dependable Computing
-                           and Fault Tolerance</a>. </p>
+                           and Fault Tolerance</a>. I'm a Fellow of
+                           the ACS (Australian Computer Society). </p>
 
                           <p> I'm a recipient of
                               multiple <a href="#templatemo-Awards">
@@ -253,6 +253,9 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b> [2025-12]</b> I'm delighted to
+                          become a Fellow of the ACS (Australian
+                          Computer Society).</li>
                           <li><b> [2025-12]</b> Our paper, "Athena and
                             Aegis", is accepted by <b>NDSS'26</b>,
                             providing the first complete solution in
