--- a/index.html
+++ b/index.html
@@ -164,11 +164,12 @@ http://www.templatemo.com/tm-395-urbanic
                               multiple <a href="#templatemo-Awards">
                               awards
                             </a> recognising my research
-                            contributions, including the IEEE TEMS
-                            Technical Achievement Award (2024), ARC
-                            DECRA Fellowship (2021), IBM Academic
-                            Award (2020), and several Best Paper
-                            Awards, among others.
+                            contributions, including the ACS
+                            Fellowship (2025), IEEE TEMS Technical
+                            Achievement Award (2024), ARC DECRA
+                            Fellowship (2021), IBM Academic Award
+                            (2020), and several Best Paper Awards,
+                            among others.
 
                             I have served as Chief Investigator on
                             <a href="#templatemo-Awards">
@@ -1151,6 +1152,10 @@ Today,</i> etc.
                                     6px">
               <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  <li>
+                    <b>ACS Fellow</b>, Australian Computer Society, 2025.
+                  </li>
+
                   <li>
                     <b>Top Reviewers Award</b> at ACM CCS 2025.
                   </li>
