--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ http://www.templatemo.com/tm-395-urbanic
                           <li><b> [2025-12]</b> I'm delighted to
                           become a Fellow of the ACS (Australian
                           Computer Society).</li>
-                          <li><b> [2025-12]</b> Our paper, "Athena and
+                          <li><b> [2025-12]</b> Our paper, "Pallas and
                             Aegis", is accepted by <b>NDSS'26</b>,
                             providing the first complete solution in
                             addressing rollback issues in
@@ -268,7 +268,8 @@ http://www.templatemo.com/tm-395-urbanic
                             <!-- In particular, we present Aegis, the first -->
                             <!-- efficient view synchronizer for BFT -->
                             <!-- protocols with trusted components. On top -->
-                            <!-- of Aegis, we introduce Athena, the first -->
+                            <!-- of Aegis, we introduce Pallas
+                            (Athena), the first -->
                             <!-- BFT consensus protocol resilient to a -->
                             <!-- strong adversary model with a bounded -->
                             <!-- number of Byzantine faults and potentially -->
@@ -908,7 +909,7 @@ Today,</i> etc.
                             <!-- identified severe attacks capable of -->
                             <!-- disrupting or taking down major -->
                             <!-- blockchains' p2p network. -->
-                            <br> <b>[NDSS'26]</b> "Athena and Aegis: Rollback Resilience in TEE-Aided Blockchain Consensus"
+                            <br> <b>[NDSS'26]</b> "Pallas and Aegis: Rollback Resilience in TEE-Aided Blockchain Consensus"
                             <br> <b>[ACM CCS'25]</b> "Posterior Security: Anonymity and Message Hiding of Standard  Signatures"
                             <br> <b>[IEEE ICDCS'25]</b> "Mosaic: Client-driven Account Allocation Framework in Sharded Blockchains"
                             <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
