--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,6 @@ Today,</i> etc.
             <li>Yuexin Xiang (Jan. 2024-), Monash University. <!-- (Co-supervised with Dr. Rafael Dowsley and A/Prof. Tsz Hon Yuen) --></li>
             <li>Brian Chen (Sept. 2023-), Monash University. <!-- (Co-supervised with Prof. Joseph Liu and A/Prof. Tsz Hon Yuen) --></li>
             <li>Dongkun Hou (May. 2023-), Monash University. <!-- (Co-supervised with Dr. Shujie Cui and Prof. Joseph Liu) --></li>
-            <li>Jun Zhao (May. 2022-), Monash University. <!-- (Co-supervised with Prof. Joseph Liu and A/Prof. Xingliang Yuan) --></li>
             <!-- <li>Dabao Wang (Jan. 2022-), Monash University. (Co-supervised with Xingliang Yuan)</li> -->
           </ol></font>
 
@@ -1058,6 +1057,8 @@ Today,</i> etc.
             <li>Yuanzhe Zhang (2021-2025), The University of Sydney. <br> (First job: Postdoc at NTU.)</li>
             <li>Liangrong Zhao (2021-2025), Monash University.</li>
             <li>Peter Ince (2021-2025), Monash University. <br> (First job: Founder, Sigil Labs.)</li>
+            <li>Jun Zhao (2022-2025), Monash University.</li>
+
             <li>Zoey Ziyi Li (2021-2024), Monash University. <br> (First job: Lecturer, University of Melbourne.)</li>
             <li>Sina Aeeneh (2020-2024), Monash University. <br> (First job: Engineer, V/Line.)</li>
             <li>Shange Fu (2019-2024), Monash University. <br> (First job: Head of Research, APRO Research)</li>
