--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,8 @@ Today,</i> etc.
 
                             <li><b>Conference (Co-)Chair (Selected recent activities)</b></li>
                             <ul type="circle">
-                              <li>PC Co-Chai, Nanyang Blockchain Conference, 2026.</li>
+                              <li>PC Co-Chair, The Web3 Scholars Conference, 2026.</li>
+                              <li>PC Co-Chair, Nanyang Blockchain Conference, 2026.</li>
                               <li> Demo Chair. The 8th IEEE International Conference on Blockchain and Cryptocurrency (ICBC), 2026.</li>
                               <li> Track Chair. The 1st IEEE International Conference on Distributed Ledger Technologies (ICDLT), 2025.</li>
                               <li> Publicity Co-Chair. The 54th
