--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ http://www.templatemo.com/tm-395-urbanic
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University, where
                       I served as Research Director of the Monash
-                      Blockchain Technology Centre, and was elected as
+                      Blockchain Technology Centre, and was selected as
                       a 2023 Monash Research Talent Accelerator (RTA)
                       Fellow. </p>
                       <b>What I Work On</b>
