--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ http://www.templatemo.com/tm-395-urbanic
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University, where
                       I served as Research Director of the Monash
-                      Blockchain Technology Centre, and was selected as
+                      Blockchain Technology Centre, and was elected as
                       a 2023 Monash Research Talent Accelerator (RTA)
                       Fellow. </p>
                       <b>What I Work On</b>
@@ -1512,6 +1512,12 @@ Today,</i> etc.
 
 	                    <li><b>Membership and direction of organisations:</b></li>
 	                    <ul type="circle">
+                              <li>
+                                [2026] Member, ICORE (International
+                                CORE Conference Rankings) Committee
+                                for Cybersecurity and Privacy (Field
+                                of Research: 4604).
+                              </li>
                               <li> [2025-present] Director of University Collaboration, The University of Sydney.</li>
                               <li> [2024-present] Director of Sydney Blockchain Centre, The University of Sydney.</li>
                               <li> [2024-present] ACS Australian
